@@ -1,0 +1,23 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-metricset-elasticsearch-ml_job]]
+=== Elasticsearch ml_job metricset
+
+experimental[]
+
+include::../../../module/elasticsearch/ml_job/_meta/docs.asciidoc[]
+
+
+==== Fields
+
+For a description of each field in the metricset, see the
+<<exported-fields-elasticsearch,exported fields>> section.
+
+Here is an example document generated by this metricset:
+
+[source,json]
+----
+include::../../../module/elasticsearch/ml_job/_meta/data.json[]
+----
