@@ -33,8 +33,9 @@ This file is generated! See scripts/docs_collector.py
 |<<metricbeat-module-dropwizard,Dropwizard>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .1+| .1+|  |<<metricbeat-metricset-dropwizard-collector,collector>> beta[]  
 |<<metricbeat-module-elasticsearch,Elasticsearch>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
-.6+| .6+|  |<<metricbeat-metricset-elasticsearch-index,index>> experimental[]  
+.7+| .7+|  |<<metricbeat-metricset-elasticsearch-index,index>> experimental[]  
 |<<metricbeat-metricset-elasticsearch-index_summary,index_summary>> experimental[]  
+|<<metricbeat-metricset-elasticsearch-ml_job,ml_job>> experimental[]  
 |<<metricbeat-metricset-elasticsearch-node,node>> beta[]  
 |<<metricbeat-metricset-elasticsearch-node_stats,node_stats>> beta[]  
 |<<metricbeat-metricset-elasticsearch-pending_tasks,pending_tasks>> experimental[]  
