@@ -5,5 +5,6 @@
     #- index
     #- index_summary
     #- shard
+    #- ml_job
   period: 10s
   hosts: ["localhost:9200"]
