@@ -1,0 +1,28 @@
+{
+    "@timestamp": "2017-10-12T08:05:34.853Z",
+    "beat": {
+        "hostname": "host.example.com",
+        "name": "host.example.com"
+    },
+    "elasticsearch": {
+        "ml": {
+            "job": {
+                "data_counts": {
+                    "processed_record_count": 0
+                },
+                "id": "filebeat-apache2-access-low_request_rate",
+                "state": "closed"
+            }
+        }
+    },
+    "metricset": {
+        "host": "127.0.0.1:9200",
+        "module": "elasticsearch",
+        "name": "ml_job",
+        "namespace": "elasticsearch.ml.job",
+        "rtt": 115
+    },
+    "service": {
+        "name": "elasticsearch"
+    }
+}
