@@ -1,0 +1,3 @@
+=== elasticsearch ml_job MetricSet
+
+This is the ml_job metricset of the module Elasticsearch. This metricset requires https://www.elastic.co/products/x-pack/machine-learning[Machine Learning] to be enabled.
