@@ -1,0 +1,23 @@
+- name: ml.job
+  type: group
+  description: >
+    ml
+  fields:
+    - name: id
+      type: keyword
+      description: >
+        Unique ml job id.
+    - name: state
+      type: keyword
+      description: >
+        Job state.
+    - name: data_counts.processed_record_count
+      type: long
+      description: >
+        Processed data events.
+    - name: data_counts.invalid_date_count
+      type: long
+      description: >
+        The number of records with either a missing date field or a date that could not be parsed.
+
+
