@@ -1,0 +1,17 @@
+{
+    "description" : "Total sum of requests",
+    "analysis_config" : {
+        "bucket_span":"10m",
+        "detectors": [
+            {
+                "detector_description": "Sum of total",
+                "function": "sum",
+                "field_name": "total"
+            }
+        ]
+    },
+    "data_description" : {
+        "time_field":"timestamp",
+        "time_format": "epoch_ms"
+    }
+}
