@@ -4,6 +4,7 @@ import os
 import unittest
 from elasticsearch import Elasticsearch, TransportError
 from parameterized import parameterized
+import json
 
 sys.path.append(os.path.join(os.path.dirname(__file__), '../../tests/system'))
 
@@ -18,6 +19,7 @@ class Test(metricbeat.BaseTest):
     @parameterized.expand([
         "index",
         "index_summary",
+        "ml_job",
         "node_stats",
         "node",
         "shard"
@@ -27,6 +29,9 @@ class Test(metricbeat.BaseTest):
         """
         elasticsearch metricset tests
         """
+        if metricset == "ml_job":
+            self.create_ml_job()
+
         es = Elasticsearch(self.get_hosts())
         es.indices.create(index='test-index', ignore=400)
         self.check_metricset("elasticsearch", metricset, self.get_hosts(), self.FIELDS + ["service.name"])
@@ -34,3 +39,27 @@ class Test(metricbeat.BaseTest):
     def get_hosts(self):
         return [os.getenv('ES_HOST', 'localhost') + ':' +
                 os.getenv('ES_PORT', '9200')]
+
+    def create_ml_job(self):
+        es = Elasticsearch(self.get_hosts())
+
+        # Enable xpack trial
+        try:
+            es.transport.perform_request('POST', "/_xpack/license/start_trial?acknowledge=true")
+        except:
+            e = sys.exc_info()[0]
+            print "Trial already enabled. Error: {}".format(e)
+
+        # Check if an ml job already exists
+        response = es.transport.perform_request('GET', "/_xpack/ml/anomaly_detectors/_all/")
+        if response["count"] > 0:
+            return
+
+        file = os.path.join(self.beat_path, "module", "elasticsearch", "ml_job", "_meta", "test", "test_job.json")
+
+        body = {}
+        with open(file, 'r') as f:
+            body = json.load(f)
+
+        path = "/_xpack/ml/anomaly_detectors/test"
+        es.transport.perform_request('PUT', path, body=body)
