@@ -299,6 +299,7 @@ https://github.com/elastic/beats/compare/v6.2.3...master[Check the HEAD diff]
 - Collect accumulated docker network metrics and mark old ones as deprecated. {pull}7253[7253]
 - Add TLS support to MongoDB module. {pull}7401[7401]
 - Added Traefik module with health metricset. {pull}7413[7413]
+- Add Elasticsearch ml_job metricsets. {pull}7196[7196]
 
 *Packetbeat*
 
